--- a/index.html
+++ b/index.html
@@ -7,21 +7,16 @@
 <link rel="stylesheet" href="jemdoc.css" type="text/css" />
 <title>Qian Ge </title>
 <!-- MathJax -->
-<script>
-window.MathJax = {
-  tex: {
-    tags: 'ams'
-  }
-};
-MathJax = {
-  loader: {
-    load: ['input/tex-base', 'output/svg', 'ui/menu', '[tex]/require']
-  },
-  tex: {
-    packages: ['base', 'require']
-  }
-};
+<script src='https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.5/latest.js?config=TeX-MML-AM_CHTML' async>
 </script>
+<script type="text/x-mathjax-config">
+MathJax.Hub.Config({
+	  TeX: { equationNumbers: { autoNumber: "AMS" } }
+});
+</script>
+<!-- End MathJax -->
+</head>
+<body>
 <table summary="Table for page layout." id="tlayout">
 <tr valign="top">
 <td id="layout-menu">
@@ -52,7 +47,7 @@ E-mail: geqian@outlook.com <br />
 <p>Prof.Ge is an Associate Professor (tenured in 2021) in <a href="https://ctten.swjtu.edu.cn/English2020/Home.htm/" target=&ldquo;blank&rdquo;>School of Transport and Logistics</a> at the <a href="https://en.swjtu.edu.cn/" target=&ldquo;blank&rdquo;>Southwest Jiaotong University</a>, China. He directs the Transportation System and Urban Network Analysis (TUNA) Lab. Prior to taking his current position, he worked as a postdoctoral researcher at <a href="https://www.titech.ac.jp/english" target=&ldquo;blank&rdquo;>Tokyo Institute of Technology</a> for two and a half years. He obtained his Ph.D. degree in Civil Engineering (Transportation) from the same institution in 2017. Both advised by <a href="https://liis.t.u-tokyo.ac.jp/" target=&ldquo;blank&rdquo;>Prof. Daisuke Fukuda</a> (relocated to the University of Tokyo). <br />
 </p>
 <h2>Research interests</h2>
-<p>The TUNA Lab focuses on a variety of <b>optimization problems</b> and <b>equilibrium models</b> in logistics and transportation networks. \(\times beta \) In particular, we leverage operations research, game theory, and machine learning tools to design mechanisms and algorithms for equitable and efficient transportation systems.  <br />
+<p>The TUNA Lab focuses on a variety of <b>optimization problems</b> and <b>equilibrium models</b> in logistics and transportation networks. In particular, we leverage operations research, game theory, and machine learning tools to design mechanisms and algorithms for equitable and efficient transportation systems.  <br />
 Some specific directions that we currently focus on include
 </p>
 <ul>
@@ -82,7 +77,7 @@ B.M. in Construction Management, Southeast University, 2010 <br />
 <td align="left"></td></tr></table>
 <div id="footer">
 <div id="footer-text">
-Page generated 2024-02-21 21:13:44 China Standard Time, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
+Page generated 2024-02-21 21:22:56 China Standard Time, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
 </div>
 </div>
 </td>
