--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@ MathJax.Hub.Config({
 <img src="../assets/fig/geq.png" alt="headshot of Prof.Qian Ge" width="161px" height="183px" />&nbsp;</td>
 <td align="left"><p><b>Qian Ge</b> <br />
 Associate Professor in Transportation and Logistics  <br />
-Associate Professor in System Science and Engineering (by courtesy)  <br />
+Associate Professor in Systems Science and Engineering (by courtesy)  <br />
 Southwest Jiaotong University  <br />
 Comprehensive Building 806, Xipu Campus <br />
 Chengdu 611756, China <br />
@@ -77,7 +77,7 @@ B.M. in Construction Management, Southeast University, 2010 <br />
 <td align="left"></td></tr></table>
 <div id="footer">
 <div id="footer-text">
-Page generated 2024-02-21 21:40:50 China Standard Time, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
+Page generated 2024-02-22 11:15:47 China Standard Time, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
 </div>
 </div>
 </td>
