--- a/www/pub.html
+++ b/www/pub.html
@@ -38,22 +38,22 @@ MathJax.Hub.Config({
 <div class="infoblock">
 <div class="blockcontent">
 <ol>
-<li><p>Hong, Y., Yan, W., <b>Ge, Q</b>. 2023. Designing sustainable logistics networks for classified municipal solid wastes collection and transferring with multi-compartment vehicles. Sustainable Cities and Society, 99, 104921
+<li><p>Hong, Y., Yan, W., <b>Ge, Q</b>. 2023. Designing sustainable logistics networks for classified municipal solid wastes collection and transferring with multi-compartment vehicles. -Sustainable Cities and Society-, 99, 104921
 </p>
 </li>
-<li><p><b>Ge, Q.</b>, Han, K., Liu, X. 2021. Matching and routing for shared autonomous vehicles in congestible network. Transportation Research Part E: Logistics and Transportation Review, 156, 102513
+<li><p><b>Ge, Q.</b>, Han, K., Liu, X. 2021. Matching and routing for shared autonomous vehicles in congestible network. -Transportation Research Part E: Logistics and Transportation Review-, 156, 102513
 </p>
 </li>
-<li><p>Dantsuji, T., Hirabayashi, S., <b>Ge, Q.</b> and Fukuda, D., 2020. Cross comparison of spatial partitioning methods for an urban transportation network. <u></u>International Journal of Intelligent Transportation Systems Research<u></u>, <u></u>18<u></u>, pp.412-421.
+<li><p>Dantsuji, T., Hirabayashi, S., <b>Ge, Q.</b> and Fukuda, D., 2020. Cross comparison of spatial partitioning methods for an urban transportation network. -International Journal of Intelligent Transportation Systems Research-, 18, pp.412-421.
 </p>
 </li>
-<li><p><b>Ge, Q.</b>, Fukuda, D., Han, K. and Song, W., 2020. Reservoir-based surrogate modeling of dynamic user equilibrium. Transportation Research Part C: Emerging Technologies, 113, pp.350-369. 
+<li><p><b>Ge, Q.</b>, Fukuda, D., Han, K. and Song, W., 2020. Reservoir-based surrogate modeling of dynamic user equilibrium. -Transportation Research Part C: Emerging Technologies-, 113, pp.350-369. 
 </p>
 </li>
-<li><p><b>Ge, Q.</b> and Fukuda, D., 2019. A macroscopic dynamic network loading model for multiple-reservoir system. Transportation Research Part B: Methodological, 126, pp.502-527.
+<li><p><b>Ge, Q.</b> and Fukuda, D., 2019. A macroscopic dynamic network loading model for multiple-reservoir system. -Transportation Research Part B: Methodological-, 126, pp.502-527.
 </p>
 </li>
-<li><p><b>Ge, Q.</b> and Fukuda, D., 2016. Updating origin&ndash;destination matrices with aggregated data of GPS traces. Transportation Research Part C: Emerging Technologies, 69, pp.291-312.
+<li><p><b>Ge, Q.</b> and Fukuda, D., 2016. Updating origin&ndash;destination matrices with aggregated data of GPS traces. -Transportation Research Part C: Emerging Technologies-, 69, pp.291-312.
 </p>
 </li>
 </ol>
@@ -87,7 +87,7 @@ MathJax.Hub.Config({
 </div></div>
 <div id="footer">
 <div id="footer-text">
-Page generated 2024-02-21 21:40:50 China Standard Time, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
+Page generated 2024-02-22 11:15:47 China Standard Time, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
 </div>
 </div>
 </td>
