--- a/www/teaching.html
+++ b/www/teaching.html
@@ -41,10 +41,10 @@ MathJax.Hub.Config({
 <li><p>TRAL007412 Traffic Engineering Fundamentals, Spring 2022-2024
 </p>
 </li>
-<li><p>TRAL007212 Database Technology with Applications, Fall 2019-2021; Spring 2021
+<li><p>TRAL007212 Database Technologies with Applications, Fall 2019-2021; Spring 2021
 </p>
 </li>
-<li><p>TRAL015012 Logistics System Analysis, Fall 2021, 2023
+<li><p>TRAL015012 Logistics Systems Analysis, Fall 2021, 2023
 </p>
 </li>
 </ul>
@@ -55,13 +55,13 @@ MathJax.Hub.Config({
 <li><p>Graduate
 </p>
 <ul>
-<li><p>Optimization Theory and Methods, Spring 2023-2024, Fall 2023 (online course)
+<li><p>S1192004 Optimization Theory and Methods, Spring 2023-2024, Fall 2023 (online course)
 </p>
 </li>
-<li><p>Frontiers in System Science, Fall 2020-2023
+<li><p>S1074005 Frontiers in Systems Science, Fall 2020-2023
 </p>
 </li>
-<li><p>System Science: Theory and Solution Methods, Fall 2020-2023
+<li><p>S1075006 Systems Science Theory and Methods, Fall 2020-2023
 </p>
 </li>
 </ul>
@@ -70,13 +70,13 @@ MathJax.Hub.Config({
 </ul>
 <h2>University of Electronic Science and Technology of China</h2>
 <ul>
-<li><p>Traffic Engineering Fundamentals, Spring 2023-2024
+<li><p>R0901320.01 Traffic Engineering Fundamentals, Spring 2023-2024
 </p>
 </li>
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2024-02-21 21:40:50 China Standard Time, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
+Page generated 2024-02-22 11:15:47 China Standard Time, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
 </div>
 </div>
 </td>
