--- a/www/index.html
+++ b/www/index.html
@@ -44,10 +44,10 @@ E-mail: geqian@outlook.com <br />
 </p>
 </td></tr></table>
 <h2>About me</h2>
-<p>Prof.Ge is an Associate Professor (tenured in 2021) in <a href="https://ctten.swjtu.edu.cn/English2020/Home.htm/" target=&ldquo;blank&rdquo;>School of Transport and Logistics</a> at the <a href="https://en.swjtu.edu.cn/" target=&ldquo;blank&rdquo;>Southwest Jiaotong University</a>, China. He directs the Transportation System and Urban Network Analysis (TUNA) Lab. Prior to taking his current position, he worked as a postdoctoral researcher at <a href="https://www.titech.ac.jp/english" target=&ldquo;blank&rdquo;>Tokyo Institute of Technology</a> for two and a half years. He obtained his Ph.D. degree in Civil Engineering (Transportation) from the same institution in 2017. Both advised by <a href="https://liis.t.u-tokyo.ac.jp/" target=&ldquo;blank&rdquo;>Prof. Daisuke Fukuda</a> (relocated to the University of Tokyo). <br />
+<p>I am an Associate Professor (tenured in 2021) in <a href="https://ctten.swjtu.edu.cn/English2020/Home.htm" target=&ldquo;blank&rdquo;>School of Transport and Logistics</a> at the <a href="https://en.swjtu.edu.cn/" target=&ldquo;blank&rdquo;>Southwest Jiaotong University</a> (SWJTU), China. Before taking this position, I worked as a postdoctoral researcher at <a href="https://www.titech.ac.jp/english" target=&ldquo;blank&rdquo;>Tokyo Institute of Technology</a> for two and a half years. I obtained Ph.D. degree in Civil Engineering (Transportation) from the same institution in 2017. Both my postdoctoral and doctoral trainings were advised by <a href="https://liis.t.u-tokyo.ac.jp/" target=&ldquo;blank&rdquo;>Prof. Daisuke Fukuda</a>. <br />
 </p>
 <h2>Research interests</h2>
-<p>The TUNA Lab focuses on a variety of <b>optimization problems</b> and <b>equilibrium models</b> in logistics and transportation networks. In particular, we leverage operations research, game theory, and machine learning tools to design mechanisms and algorithms for equitable and efficient transportation systems.  <br />
+<p>I lead the Transportation System and Urban Network Analysis (TUNA) Lab in SWJTU. The TUNA Lab focuses on a variety of <b>optimization problems</b> and <b>equilibrium models</b> in logistics and transportation networks. In particular, we leverage operations research, game theory, and machine learning tools to design mechanisms and algorithms for equitable and efficient transportation systems.  <br />
 Some specific directions that we currently focus on include
 </p>
 <ul>
@@ -72,12 +72,14 @@ B.M. in Construction Management, Southeast University, 2010 <br />
 <p>We are continuously looking for self-motivated students in the fields of transportation and logistics. 
 </p>
 </div></div>
+<p>Follow us on wechat
+</p>
 <table class="imgtable"><tr><td>
 <img src="../assets/fig/tuna.png" alt="TUNA lab" height="200px" />&nbsp;</td>
 <td align="left"></td></tr></table>
 <div id="footer">
 <div id="footer-text">
-Page generated 2024-02-22 11:21:54 China Standard Time, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
+Page generated 2024-02-22 11:33:42 China Standard Time, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
 </div>
 </div>
 </td>
