--- a/www/pub.html
+++ b/www/pub.html
@@ -74,20 +74,20 @@ MathJax.Hub.Config({
 <li><p>Cao P., Chen Y., Su Z., <b>Ge Q.</b> A paper on mechanism design.
 </p>
 </li>
-<li><p>Han, K., Huang, T., Fan, W., <b>Ge, Q.</b>, Dong, S., Wang X. Macroscopic fundamental diagram with volume-delay relationship: model derivation, empirical validation and invariance property.
+<li><p>Han, K., Huang, T., Fan, W., <b>Ge, Q.</b>, Dong, S., Wang X. A paper on MFD
 </p>
 </li>
-<li><p>Ji, W., Han, K., *Ge Q. Extended team orienteering problem: Algorithms and applications.
+<li><p>Ji, W., Han, K., <b>Ge Q.</b> A paper on TOP
 </p>
 </li>
-<li><p>Yang B., Han, K., Tu, W., <b>Ge Q.</b> Fairness in online vehicle-cargo matching: An intuitionistic fuzzy set theory and tripartite evolutionary game approach.
+<li><p>Yang B., Han, K., Tu, W., <b>Ge Q.</b> A paper on vehicle-cargo matching
 </p>
 </li>
 </ol>
 </div></div>
 <div id="footer">
 <div id="footer-text">
-Page generated 2024-02-22 11:21:54 China Standard Time, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
+Page generated 2024-02-22 11:33:42 China Standard Time, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
 </div>
 </div>
 </td>
