--- a/pub.html
+++ b/pub.html
@@ -38,22 +38,22 @@ MathJax.Hub.Config({
 <div class="infoblock">
 <div class="blockcontent">
 <ol>
-<li><p>Hong, Y., Yan, W., <b>Ge, Q</b>. 2023. Designing sustainable logistics networks for classified municipal solid wastes collection and transferring with multi-compartment vehicles. -Sustainable Cities and Society-, 99, 104921
+<li><p>Hong, Y., Yan, W., <b>Ge, Q</b>. 2023. Designing sustainable logistics networks for classified municipal solid wastes collection and transferring with multi-compartment vehicles. <i>Sustainable Cities and Society</i>, 99, 104921
 </p>
 </li>
-<li><p><b>Ge, Q.</b>, Han, K., Liu, X. 2021. Matching and routing for shared autonomous vehicles in congestible network. -Transportation Research Part E: Logistics and Transportation Review-, 156, 102513
+<li><p><b>Ge, Q.</b>, Han, K., Liu, X. 2021. Matching and routing for shared autonomous vehicles in congestible network. <i>Transportation Research Part E: Logistics and Transportation Review</i>, 156, 102513
 </p>
 </li>
-<li><p>Dantsuji, T., Hirabayashi, S., <b>Ge, Q.</b> and Fukuda, D., 2020. Cross comparison of spatial partitioning methods for an urban transportation network. -International Journal of Intelligent Transportation Systems Research-, 18, pp.412-421.
+<li><p>Dantsuji, T., Hirabayashi, S., <b>Ge, Q.</b> and Fukuda, D., 2020. Cross comparison of spatial partitioning methods for an urban transportation network. <i>International Journal of Intelligent Transportation Systems Research</i>, 18, pp.412-421.
 </p>
 </li>
-<li><p><b>Ge, Q.</b>, Fukuda, D., Han, K. and Song, W., 2020. Reservoir-based surrogate modeling of dynamic user equilibrium. -Transportation Research Part C: Emerging Technologies-, 113, pp.350-369. 
+<li><p><b>Ge, Q.</b>, Fukuda, D., Han, K. and Song, W., 2020. Reservoir-based surrogate modeling of dynamic user equilibrium. <i>Transportation Research Part C: Emerging Technologies</i>, 113, pp.350-369. 
 </p>
 </li>
-<li><p><b>Ge, Q.</b> and Fukuda, D., 2019. A macroscopic dynamic network loading model for multiple-reservoir system. -Transportation Research Part B: Methodological-, 126, pp.502-527.
+<li><p><b>Ge, Q.</b> and Fukuda, D., 2019. A macroscopic dynamic network loading model for multiple-reservoir system. <i>Transportation Research Part B: Methodological</i>, 126, pp.502-527.
 </p>
 </li>
-<li><p><b>Ge, Q.</b> and Fukuda, D., 2016. Updating origin&ndash;destination matrices with aggregated data of GPS traces. -Transportation Research Part C: Emerging Technologies-, 69, pp.291-312.
+<li><p><b>Ge, Q.</b> and Fukuda, D., 2016. Updating origin&ndash;destination matrices with aggregated data of GPS traces. <i>Transportation Research Part C: Emerging Technologies</i>, 69, pp.291-312.
 </p>
 </li>
 </ol>
@@ -74,20 +74,20 @@ MathJax.Hub.Config({
 <li><p>Cao P., Chen Y., Su Z., <b>Ge Q.</b> A paper on mechanism design.
 </p>
 </li>
-<li><p>Han, K., Huang, T., Fan, W., <b>Ge, Q.</b>, Dong, S., Wang X. Macroscopic fundamental diagram with volume-delay relationship: model derivation, empirical validation and invariance property.
+<li><p>Han, K., Huang, T., Fan, W., <b>Ge, Q.</b>, Dong, S., Wang X. A paper on MFD
 </p>
 </li>
-<li><p>Ji, W., Han, K., *Ge Q. Extended team orienteering problem: Algorithms and applications.
+<li><p>Ji, W., Han, K., <b>Ge Q.</b> A paper on TOP
 </p>
 </li>
-<li><p>Yang B., Han, K., Tu, W., <b>Ge Q.</b> Fairness in online vehicle-cargo matching: An intuitionistic fuzzy set theory and tripartite evolutionary game approach.
+<li><p>Yang B., Han, K., Tu, W., <b>Ge Q.</b> A paper on vehicle-cargo matching
 </p>
 </li>
 </ol>
 </div></div>
 <div id="footer">
 <div id="footer-text">
-Page generated 2024-02-22 11:15:47 China Standard Time, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
+Page generated 2024-02-22 11:33:42 China Standard Time, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
 </div>
 </div>
 </td>
