--- a/www/index.html
+++ b/www/index.html
@@ -61,11 +61,36 @@ Some specific directions that we currently focus on include
 </p>
 </li>
 </ul>
-<h2>Education</h2>
-<p>Ph.D. in Civil Engineering (Transportation), Tokyo Institute of Technology, 2017 <br />
-M.E. in Logistics Engineering, Tsinghua University, 2012 <br />
-B.M. in Construction Management, Southeast University, 2010 <br />
+<h2>Distinctions</h2>
+<ul>
+<li><p>Seiichi Tejima International Student Research Award, January 2019 <br />
 </p>
+</li>
+<li><p>Kikkwa-Yamaguchi Award, December 2018 <br />
+</p>
+</li>
+<li><p>16th Behavior in Networks Research Workshop Award, October 2017 <br />
+</p>
+</li>
+<li><p>MEXT Scholarship for doctoral students, October 2013-October 2016 <br />
+</p>
+</li>
+<li><p>MEXT Scholarship for research students, October 2012-October 2013 <br />
+</p>
+</li>
+</ul>
+<h2>Education</h2>
+<ul>
+<li><p>Ph.D. in Civil Engineering (Transportation), Tokyo Institute of Technology, 2017 <br />
+</p>
+</li>
+<li><p>M.E. in Logistics Engineering, Tsinghua University, 2012 <br />
+</p>
+</li>
+<li><p>B.M. in Construction Management, Southeast University, 2010 <br />
+</p>
+</li>
+</ul>
 <h2>Opening </h2>
 <div class="infoblock">
 <div class="blockcontent">
@@ -79,7 +104,7 @@ B.M. in Construction Management, Southeast University, 2010 <br />
 <td align="left"></td></tr></table>
 <div id="footer">
 <div id="footer-text">
-Page generated 2024-02-22 11:33:42 China Standard Time, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
+Page generated 2024-02-22 11:45:44 China Standard Time, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
 </div>
 </div>
 </td>
