--- a/www/teaching.html
+++ b/www/teaching.html
@@ -38,7 +38,7 @@ MathJax.Hub.Config({
 <li><p>TRAL008112 Data Structures and Algorithms, Fall 2022-2023; Spring 2023-2024
 </p>
 </li>
-<li><p>TRAL007412 Traffic Engineering Fundamentals, Spring 2022-2024
+<li><p>TRAL007412 [<a href="../tef_uestc.html" target=&ldquo;blank&rdquo;>Traffic Engineering Fundamentals</a>], Spring 2022-2024
 </p>
 </li>
 <li><p>TRAL007212 Database Technologies with Applications, Fall 2019-2021; Spring 2021
@@ -76,7 +76,7 @@ MathJax.Hub.Config({
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2024-03-09 11:01:46 China Standard Time, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
+Page generated 2024-03-09 12:58:45 China Standard Time, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
 </div>
 </div>
 </td>
