--- a/tef_uestc.html
+++ b/tef_uestc.html
@@ -31,12 +31,17 @@ MathJax.Hub.Config({
 <h1>交通工程学</h1>
 </div>
 <h2>课程简介</h2>
-<p>交通工程学为交通工程专业的专业课之一，但是又区分于一般的导论课。除了对交通工程专业需要掌握的技能做一般性了解之外，本门课程还应该涵盖分析复杂交通问题的能力和后续课程中所必需的技能。由于本课程所面向的学生同时在学习交通流理论、交通规划等课程，为了避免重复，将传统上应该设置的同类内容替换为离散选择、网络优化等内容。
+<p>交通工程学为交通工程专业的专业课之一，而非一般的导论课。通过学习这门课，学生们不仅对交通工程专业需要学习的内容具有一般性了解，更应该掌握分析复杂交通问题的能力和学习后续课程中所必需的基础技能。由于本课程所面向的学生同时在学习交通流理论、交通规划等课程，为了避免重复，将传统上设置的同类内容替换为离散选择、网络优化等内容。
 </p>
 <h2>课程信息</h2>
-<p>上课时间：第1-11周周五9-11节（19:30-21:55）
-上课地点：电子科技大学沙河校区第二教学楼 110
-课程内容：
+<ul>
+<li><p>上课时间：第1-11周周五9-11节（19:30-21:55）
+</p>
+</li>
+<li><p>上课地点：电子科技大学沙河校区第二教学楼 110
+</p>
+</li>
+<li><p>课程内容：
 </p>
 <ul>
 <li><p>人、车、路、网络的基本概念与特性
@@ -47,6 +52,9 @@ MathJax.Hub.Config({
 </li>
 <li><p>分析与解决网络优化问题的技术手段
 </p>
+</li>
+</ul>
+
 </li>
 </ul>
 <h2>考核要求</h2>
@@ -60,18 +68,57 @@ MathJax.Hub.Config({
 </ul>
 <h2>课件（每年更新）</h2>
 <ul>
-<li><p>[<a href="../assets/pdf/TrafficEngineeringFundaments/1.Introduction.pdf" target=&ldquo;blank&rdquo;>1. 交通工程学简介</a>] 
+<li><p>1. 交通工程学简介 [<a href="../assets/pdf/TrafficEngineeringFundaments/1.Introduction.pdf" target=&ldquo;blank&rdquo;>下载或阅读</a>] 
 </p>
 </li>
-<li><p>[<a href="../assets/pdf/TrafficEngineeringFundaments/2.Characteristics.pdf" target=&ldquo;blank&rdquo;>2. 人、车、路的交通特性</a>] 
+<li><p>2. 人、车、路的交通特性 [<a href="../assets/pdf/TrafficEngineeringFundaments/2.Characteristics.pdf" target=&ldquo;blank&rdquo;>下载或阅读</a>] 
 </p>
 </li>
-<li><p>[<a href="../assets/pdf/TrafficEngineeringFundaments/3.Trafficchar.pdf" target=&ldquo;blank&rdquo;>3. 交通流特性</a>] </p>
+<li><p>3. 交通流特性 [<a href="../assets/pdf/TrafficEngineeringFundaments/3.Trafficchar.pdf" target=&ldquo;blank&rdquo;>下载或阅读</a>] 
+</p>
+</li>
+<li><p>4. 交通调查 [<a href="../assets/pdf/TrafficEngineeringFundaments/4.Surveying.pdf" target=&ldquo;blank&rdquo;>../assets/pdf/TrafficEngineeringFundaments/4.Surveying.pdf</a>] 
+</p>
+</li>
+<li><p>5. 交通流理论 [<a href="../assets/pdf/TrafficEngineeringFundaments/5.Trafficflow.pdf" target=&ldquo;blank&rdquo;>下载或阅读</a>] 
+</p>
+</li>
+<li><p>6. 交通仿真简介 [<a href="../assets/pdf/TrafficEngineeringFundaments/6.Simulation.pdf" target=&ldquo;blank&rdquo;>下载或阅读</a>] 
+</p>
+</li>
+<li><p>7. 道路通行能力(1) [<a href="../assets/pdf/TrafficEngineeringFundaments/7-8.HC&amp;LOS.pdf" target=&ldquo;blank&rdquo;>下载或阅读</a>] 
+</p>
+</li>
+<li><p>8. 道路通行能力(2) [同上] 
+</p>
+</li>
+<li><p>9. 交通中的选择行为(1) [<a href="../assets/pdf/TrafficEngineeringFundaments/9-10.Choice.pdf" target=&ldquo;blank&rdquo;>下载或阅读</a>] 
+</p>
+</li>
+<li><p>10. 交通中的选择行为(2) [同上] 
+</p>
+</li>
+<li><p>11. 优化方法简介与线性规划 [<a href="../assets/pdf/TrafficEngineeringFundaments/11.LP.pdf" target=&ldquo;blank&rdquo;>下载或阅读</a>] 
+</p>
+</li>
+<li><p>12. 整数线性规划 [<a href="../assets/pdf/TrafficEngineeringFundaments/12.ILP.pdf" target=&ldquo;blank&rdquo;>下载或阅读</a>] 
+</p>
+</li>
+<li><p>13. 网络优化简介 [<a href="../assets/pdf/TrafficEngineeringFundaments/13.NetOpt.pdf" target=&ldquo;blank&rdquo;>下载或阅读</a>] 
+</p>
+</li>
+<li><p>14. 旅行商问题与启发式方法 [<a href="../assets/pdf/TrafficEngineeringFundaments/14.TSP.pdf" target=&ldquo;blank&rdquo;>下载或阅读</a>] 
+</p>
+</li>
+<li><p>15. 车辆路径问题(1) [<a href="../assets/pdf/TrafficEngineeringFundaments/15-16.VRP.pdf" target=&ldquo;blank&rdquo;>下载或阅读</a>] 
+</p>
+</li>
+<li><p>16. 车辆路径问题(2) [同上] </p>
 </li>
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2024-03-09 12:58:45 China Standard Time, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
+Page generated 2024-03-09 15:17:51 China Standard Time, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
 </div>
 </div>
 </td>
