--- a/teaching.html
+++ b/teaching.html
@@ -38,13 +38,13 @@ MathJax.Hub.Config({
 <li><p>TRAL008112 Data Structures and Algorithms, Fall 2022-2023; Spring 2023-2024
 </p>
 </li>
-<li><p>TRAL007412 [<a href="../tef_uestc.html" target=&ldquo;blank&rdquo;>Traffic Engineering Fundamentals</a>], Spring 2022-2024
+<li><p>TRAL007412 <a href="../tef_uestc.html" target=&ldquo;blank&rdquo;>Traffic Engineering Fundamentals</a>, Spring 2022-2024
 </p>
 </li>
 <li><p>TRAL007212 Database Technologies with Applications, Fall 2019-2021; Spring 2021
 </p>
 </li>
-<li><p>TRAL015012 Logistics Systems Analysis, Fall 2021, 2023
+<li><p>TRAL015012 <a href="../lsa.html" target=&ldquo;blank&rdquo;>Logistics Systems Analysis</a>, Fall 2021, 2023
 </p>
 </li>
 </ul>
@@ -76,7 +76,7 @@ MathJax.Hub.Config({
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2024-03-09 12:58:45 China Standard Time, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
+Page generated 2024-03-09 15:14:57 China Standard Time, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
 </div>
 </div>
 </td>
