--- a/lsa.html
+++ b/lsa.html
@@ -75,6 +75,15 @@ MathJax.Hub.Config({
 </p>
 </li>
 </ul>
+<h2>教材</h2>
+<ol>
+<li><p>Carlos Daganzo. Logistics System Analysis. 4th Edition. 2005. Springer-Verlag Berlin Heidelberg.
+</p>
+</li>
+<li><p>Gianpaolo Ghiani, Gilbert Laporte, Roberto Musmanno. Introduction to Logistics Systems Management. 2nd Edition. 2013. Wiley.
+</p>
+</li>
+</ol>
 <h2>课件（每年更新）</h2>
 <ul>
 <li><p>1. 简介 [<a href="../assets/pdf/LSA/Introduction.pdf" target=&ldquo;blank&rdquo;>下载或阅读</a>] 
@@ -125,7 +134,7 @@ MathJax.Hub.Config({
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2024-03-09 15:17:51 China Standard Time, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
+Page generated 2024-03-09 15:24:42 China Standard Time, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
 </div>
 </div>
 </td>
