--- a/tef_uestc.html
+++ b/tef_uestc.html
@@ -66,6 +66,23 @@ MathJax.Hub.Config({
 </p>
 </li>
 </ul>
+<h2>教材</h2>
+<p>教材：
+</p>
+<ol>
+<li><p>王炜、陈峻、过秀成等. 交通工程学（第3版）. 南京：东南大学出版社. 2019.
+</p>
+</li>
+<li><p>Fred L. Mannering, Scott S. Washburn. Principles of Highway Engineering and Traffic Analysis. Wiley. 2019.
+</p>
+</li>
+<li><p>Kenneth Train. Discrete Choice Methods with Simulation. 2nd Edition. Cambridge University Press. 2009
+</p>
+</li>
+<li><p>Andreas Horni, Kai Nagel, Kay W. Axhausen (eds.) The Multi-Agent Transport Simulation MATSim. London: Ubiquity Press. 2016
+</p>
+</li>
+</ol>
 <h2>课件（每年更新）</h2>
 <ul>
 <li><p>1. 交通工程学简介 [<a href="../assets/pdf/TrafficEngineeringFundaments/1.Introduction.pdf" target=&ldquo;blank&rdquo;>下载或阅读</a>] 
@@ -77,7 +94,7 @@ MathJax.Hub.Config({
 <li><p>3. 交通流特性 [<a href="../assets/pdf/TrafficEngineeringFundaments/3.Trafficchar.pdf" target=&ldquo;blank&rdquo;>下载或阅读</a>] 
 </p>
 </li>
-<li><p>4. 交通调查 [<a href="../assets/pdf/TrafficEngineeringFundaments/4.Surveying.pdf" target=&ldquo;blank&rdquo;>../assets/pdf/TrafficEngineeringFundaments/4.Surveying.pdf</a>] 
+<li><p>4. 交通调查 [<a href="../assets/pdf/TrafficEngineeringFundaments/4.Surveying.pdf" target=&ldquo;blank&rdquo;>下载或阅读</a>] 
 </p>
 </li>
 <li><p>5. 交通流理论 [<a href="../assets/pdf/TrafficEngineeringFundaments/5.Trafficflow.pdf" target=&ldquo;blank&rdquo;>下载或阅读</a>] 
@@ -118,7 +135,7 @@ MathJax.Hub.Config({
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2024-03-09 15:17:51 China Standard Time, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
+Page generated 2024-03-09 15:24:42 China Standard Time, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
 </div>
 </div>
 </td>
