--- a/tef_uestc.html
+++ b/tef_uestc.html
@@ -62,13 +62,11 @@ MathJax.Hub.Config({
 <li><p>作业：道路通行能力
 </p>
 </li>
-<li><p>课程设计：编程解决现实规模问题，信号控制<i>配送问题</i>交通方式划分三选一
+<li><p>课程设计：编程解决现实规模问题，信号控制/配送问题/交通方式划分三选一
 </p>
 </li>
 </ul>
 <h2>教材</h2>
-<p>教材：
-</p>
 <ol>
 <li><p>王炜、陈峻、过秀成等. 交通工程学（第3版）. 南京：东南大学出版社. 2019.
 </p>
@@ -135,7 +133,7 @@ MathJax.Hub.Config({
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2024-03-09 15:24:42 China Standard Time, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
+Page generated 2024-03-09 15:27:51 China Standard Time, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
 </div>
 </div>
 </td>
