--- a/www/pub.html
+++ b/www/pub.html
@@ -24,7 +24,7 @@ MathJax.Hub.Config({
 <div class="menu-item"><a href="index.html">Home</a></div>
 <div class="menu-item"><a href=" https://scholar.google.com/citations?user=EHyM3xEAAAAJ" target="blank">Research</a></div>
 <div class="menu-item"><a href="teaching.html">Teaching</a></div>
-<div class="menu-item"><a href="pub.html">Publications</a></div>
+<div class="menu-item"><a href="pub.html" class="current">Publications</a></div>
 </td>
 <td id="layout-content">
 <div id="toptitle">
@@ -91,7 +91,7 @@ For an up-to-date publication list, please see my <a href="https://scholar.googl
 </div></div>
 <div id="footer">
 <div id="footer-text">
-Page generated 2024-03-09 21:41:03 China Standard Time, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
+Page generated 2024-03-10 10:35:58 China Standard Time, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
 </div>
 </div>
 </td>
