--- a/cpub.html
+++ b/cpub.html
@@ -22,98 +22,76 @@ MathJax.Hub.Config({
 <td id="layout-menu">
 <div class="menu-category">葛乾</div>
 <div class="menu-item"><a href="cindex.html">首页</a></div>
-<div class="menu-item"><a href=" https://www.researchgate.net/profile/Qian-Ge-2" target="blank">研究</a></div>
-<div class="menu-item"><a href="cteaching.html">教学</a></div>
-<div class="menu-item"><a href="cpub.html" class="current">论文</a></div>
+<div class="menu-item"><a href=" https://www.researchgate.net/profile/Qian-Ge-2" target="blank">ResearchGate</a></div>
+<div class="menu-item"><a href="cteaching.html">教学情况</a></div>
+<div class="menu-item"><a href="cpub.html" class="current">代表论文</a></div>
 </td>
 <td id="layout-content">
-<p>
-
+<p>
 </p>
-<h1>代表作
-</h1>
-<p>
-
-全部期刊论文与预印稿见 <a href="https://scholar.google.com/citations?user=EHyM3xEAAAAJ" target=&ldquo;blank&rdquo;>Google 学术</a> <br />
-
-
-
+<h1>代表作</h1>
+<p>
+全部期刊论文与预印稿见 <a href="https://scholar.google.com/citations?user=EHyM3xEAAAAJ" target=&ldquo;blank&rdquo;>Google 学术</a> <br />
+
 </p>
-<h2>期刊论文
-</h2>
-<p>
-
+<h2>期刊论文</h2>
+<p>
 </p>
 <div class="infoblock">
 <div class="blockcontent">
 <ol>
-<li><p>Hong, Y., Yan, W., <b>Ge, Q</b>. 2023. Designing sustainable logistics networks for classified municipal solid wastes collection and transferring with multi-compartment vehicles. <i>Sustainable Cities and Society</i>, 99, 104921
-
+<li><p>Hong, Y., Yan, W., <b>Ge, Q</b>. 2023. Designing sustainable logistics networks for classified municipal solid wastes collection and transferring with multi-compartment vehicles. <i>Sustainable Cities and Society</i>, 99, 104921
 </p>
 </li>
-<li><p><b>Ge, Q.</b>, Han, K., Liu, X. 2021. Matching and routing for shared autonomous vehicles in congestible network. <i>Transportation Research Part E: Logistics and Transportation Review</i>, 156, 102513
-
+<li><p><b>Ge, Q.</b>, Han, K., Liu, X. 2021. Matching and routing for shared autonomous vehicles in congestible network. <i>Transportation Research Part E: Logistics and Transportation Review</i>, 156, 102513
 </p>
 </li>
-<li><p>Dantsuji, T., Hirabayashi, S., <b>Ge, Q.</b> and Fukuda, D., 2020. Cross comparison of spatial partitioning methods for an urban transportation network. <i>International Journal of Intelligent Transportation Systems Research</i>, 18, pp.412-421.
-
+<li><p>Dantsuji, T., Hirabayashi, S., <b>Ge, Q.</b> and Fukuda, D., 2020. Cross comparison of spatial partitioning methods for an urban transportation network. <i>International Journal of Intelligent Transportation Systems Research</i>, 18, pp.412-421.
 </p>
 </li>
-<li><p><b>Ge, Q.</b>, Fukuda, D., Han, K. and Song, W., 2020. Reservoir-based surrogate modeling of dynamic user equilibrium. <i>Transportation Research Part C: Emerging Technologies</i>, 113, pp.350-369. 
-
+<li><p><b>Ge, Q.</b>, Fukuda, D., Han, K. and Song, W., 2020. Reservoir-based surrogate modeling of dynamic user equilibrium. <i>Transportation Research Part C: Emerging Technologies</i>, 113, pp.350-369. 
 </p>
 </li>
-<li><p><b>Ge, Q.</b> and Fukuda, D., 2019. A macroscopic dynamic network loading model for multiple-reservoir system. <i>Transportation Research Part B: Methodological</i>, 126, pp.502-527.
-
+<li><p><b>Ge, Q.</b> and Fukuda, D., 2019. A macroscopic dynamic network loading model for multiple-reservoir system. <i>Transportation Research Part B: Methodological</i>, 126, pp.502-527.
 </p>
 </li>
-<li><p><b>Ge, Q.</b> and Fukuda, D., 2016. Updating origin&ndash;destination matrices with aggregated data of GPS traces. <i>Transportation Research Part C: Emerging Technologies</i>, 69, pp.291-312.
-
+<li><p><b>Ge, Q.</b> and Fukuda, D., 2016. Updating origin&ndash;destination matrices with aggregated data of GPS traces. <i>Transportation Research Part C: Emerging Technologies</i>, 69, pp.291-312.
 </p>
 </li>
 </ol>
 </div></div>
-<h2>工作论文
-</h2>
-<p>
-
+<h2>工作论文</h2>
+<p>
 </p>
 <div class="infoblock">
 <div class="blockcontent">
 <ol>
-<li><p>Liu, S., <b>Ge, Q.</b>, Han, K. A paper on mechanism design.
-
+<li><p>Liu, S., <b>Ge, Q.</b>, Han, K. A paper on mechanism design.
 </p>
 </li>
-<li><p>Zhang, Y., <b>Ge, Q.</b>, Han, K. A paper on mechanism design.
-
+<li><p>Zhang, Y., <b>Ge, Q.</b>, Han, K. A paper on mechanism design.
 </p>
 </li>
-<li><p><b>Ge, Q.</b>, Liu, J., Han, K.  A paper on interdiction games.
-
+<li><p><b>Ge, Q.</b>, Liu, J., Han, K.  A paper on interdiction games.
 </p>
 </li>
-<li><p>Cao P., Chen Y., Su Z., <b>Ge Q.</b> A paper on mechanism design.
-
+<li><p>Cao P., Chen Y., Su Z., <b>Ge Q.</b> A paper on mechanism design.
 </p>
 </li>
-<li><p>Han, K., Huang, T., Fan, W., <b>Ge, Q.</b>, Dong, S., Wang X. A paper on MFD
-
+<li><p>Han, K., Huang, T., Fan, W., <b>Ge, Q.</b>, Dong, S., Wang X. A paper on MFD
 </p>
 </li>
-<li><p>Ji, W., Han, K., <b>Ge Q.</b> A paper on TOP
-
+<li><p>Ji, W., Han, K., <b>Ge Q.</b> A paper on TOP
 </p>
 </li>
-<li><p>Yang B., Han, K., Tu, W., <b>Ge Q.</b> A paper on vehicle-cargo matching
-
+<li><p>Yang B., Han, K., Tu, W., <b>Ge Q.</b> A paper on vehicle-cargo matching
 </p>
 </li>
 </ol>
 </div></div>
 <div id="footer">
 <div id="footer-text">
-Page generated 2024-03-10 10:35:58 China Standard Time, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
+Page generated 2024-03-10 20:10:22 China Standard Time, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
 </div>
 </div>
 </td>
