--- a/lsa.html
+++ b/lsa.html
@@ -51,22 +51,22 @@ MathJax.Hub.Config({
 <li><p>课程内容：
 </p>
 <ul>
-<li><p>物流系统各个物流环节费用与效益的量化分析，
+<li><p>物流系统各个物流环节费用与效益的量化分析
 </p>
 </li>
-<li><p>物流系统简化分析思路和策略，
+<li><p>物流系统简化分析思路和策略
 </p>
 </li>
-<li><p>一对一配送的最优化方法
+<li><p>一对一配送问题
 </p>
 </li>
-<li><p>一到多的配
+<li><p>一到多配送问题
 </p>
 </li>
-<li><p>有转运的一到多配送
+<li><p>有转运的一到多配送问题
 </p>
 </li>
-<li><p>多到多的配送的问题。
+<li><p>多到多配送问题
 
 </p>
 </li>
@@ -152,10 +152,10 @@ MathJax.Hub.Config({
 </ul>
 <h2>相关课程</h2>
 <p>
-本课程主要介绍了连续近似理论在物流系统设计和分析中的应用。不仅在物流领域，连续近似在公共交通领域同样是非常重要的基础理论。感兴趣的同学，不妨学习下范文博老师的《公共交通系统基础模型》课程 [<a href="https://faculty.swjtu.edu.cn/fanwenbo/zh_CN/jxzy/109473/content/1698.htm#jxzy" target=&ldquo;blank&rdquo;>课件</a>,  <a href="https://space.bilibili.com/2034832179/channel/collectiondetail?sid=1521702" target=&ldquo;blank&rdquo;>视频</a>]</p>
+本课程主要介绍了连续近似理论在物流系统设计和分析中的应用。不仅在物流领域，连续近似在公共交通领域同样是非常重要的基础理论。感兴趣的同学，不妨学习下<a href="https://faculty.swjtu.edu.cn/fanwenbo/zh_CN/index.htm" target=&ldquo;blank&rdquo;>范文博</a>老师的《公共交通系统基础模型》课程 [<a href="https://faculty.swjtu.edu.cn/fanwenbo/zh_CN/jxzy/109473/content/1698.htm#jxzy" target=&ldquo;blank&rdquo;>课件</a>,  <a href="https://space.bilibili.com/2034832179/channel/collectiondetail?sid=1521702" target=&ldquo;blank&rdquo;>视频</a>]。</p>
 <div id="footer">
 <div id="footer-text">
-Page generated 2024-03-09 21:31:24 China Standard Time, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
+Page generated 2024-03-10 20:10:22 China Standard Time, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
 </div>
 </div>
 </td>
