--- a/cteaching.html
+++ b/cteaching.html
@@ -22,9 +22,9 @@ MathJax.Hub.Config({
 <td id="layout-menu">
 <div class="menu-category">葛乾</div>
 <div class="menu-item"><a href="cindex.html">首页</a></div>
-<div class="menu-item"><a href=" https://www.researchgate.net/profile/Qian-Ge-2" target="blank">研究</a></div>
-<div class="menu-item"><a href="cteaching.html" class="current">教学</a></div>
-<div class="menu-item"><a href="cpub.html">论文</a></div>
+<div class="menu-item"><a href=" https://www.researchgate.net/profile/Qian-Ge-2" target="blank">ResearchGate</a></div>
+<div class="menu-item"><a href="cteaching.html" class="current">教学情况</a></div>
+<div class="menu-item"><a href="cpub.html">代表论文</a></div>
 </td>
 <td id="layout-content">
 <h1>教学</h1>
@@ -74,7 +74,7 @@ MathJax.Hub.Config({
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2024-03-10 10:35:58 China Standard Time, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
+Page generated 2024-03-10 20:10:22 China Standard Time, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
 </div>
 </div>
 </td>
