--- a/www/teaching.html
+++ b/www/teaching.html
@@ -30,6 +30,8 @@ MathJax.Hub.Config({
 <div id="toptitle">
 <h1>Teaching</h1>
 </div>
+<p>All courses are taught in Chinese.
+</p>
 <h2>Southwest Jiaotong University</h2>
 <ul>
 <li><p>Undergraduate
@@ -70,13 +72,13 @@ MathJax.Hub.Config({
 </ul>
 <h2>University of Electronic Science and Technology of China</h2>
 <ul>
-<li><p>R0901320.01 Traffic Engineering Fundamentals, Spring 2023-2024
+<li><p>R0901320.01 <a href="../tef_uestc.html" target=&ldquo;blank&rdquo;>Traffic Engineering Fundamentals</a>, Spring 2023-2024
 </p>
 </li>
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2024-03-10 10:35:58 China Standard Time, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
+Page generated 2024-03-10 20:19:55 China Standard Time, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
 </div>
 </div>
 </td>
