--- a/www/index.html
+++ b/www/index.html
@@ -95,7 +95,7 @@ Some specific directions that we currently focus on include
 <h2>Opening </h2>
 <div class="infoblock">
 <div class="blockcontent">
-<p>I am not qualified to advise doctoral students currently.
+<p>I am not qualified to advise doctoral students currently. Perspective master students may check <a href="../perspective.html" target=&ldquo;blank&rdquo;>this page</a> for information on our lab. 
 </p>
 </div></div>
 <p>Follow us on wechat
@@ -105,7 +105,7 @@ Some specific directions that we currently focus on include
 <td align="left"></td></tr></table>
 <div id="footer">
 <div id="footer-text">
-Page generated 2024-03-10 20:19:55 China Standard Time, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
+Page generated 2024-03-10 20:30:11 China Standard Time, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
 </div>
 </div>
 </td>
