--- a/www/index.html
+++ b/www/index.html
@@ -40,7 +40,7 @@ Chengdu 611756, China <br />
 E-mail: geqian@outlook.com <br />
 </p>
 <p>[<a href="https://scholar.google.com/citations?user=EHyM3xEAAAAJ" target=&ldquo;blank&rdquo;>Google scholar</a>] [<a href="https://www.researchgate.net/profile/Qian-Ge-2/" target=&ldquo;blank&rdquo;>Researchgate</a>]
-[<a href="../cindex.html" target=&ldquo;blank&rdquo;>ä¸­æ–‡</a>]
+[<a href="../cindex.html" target=&ldquo;blank&rdquo;>ÖÐÎÄ</a>]
 <br />
 </p>
 </td></tr></table>
@@ -105,7 +105,7 @@ Some specific directions that we currently focus on include
 <td align="left"></td></tr></table>
 <div id="footer">
 <div id="footer-text">
-Page generated 2024-03-10 20:30:11 China Standard Time, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
+Page generated 2024-03-10 20:36:14 China Standard Time, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
 </div>
 </div>
 </td>
