--- a/index.html
+++ b/index.html
@@ -22,9 +22,10 @@ MathJax.Hub.Config({
 <td id="layout-menu">
 <div class="menu-category">Qian Ge</div>
 <div class="menu-item"><a href="index.html" class="current">Home</a></div>
-<div class="menu-item"><a href=" https://scholar.google.com/citations?user=EHyM3xEAAAAJ" target="blank">Research</a></div>
+<div class="menu-item"><a href="news.html">News</a></div>
 <div class="menu-item"><a href="teaching.html">Teaching</a></div>
 <div class="menu-item"><a href="pub.html">Publications</a></div>
+<div class="menu-item"><a href="tuna.html">Tuna&nbsp;Lab</a></div>
 </td>
 <td id="layout-content">
 <div id="toptitle">
@@ -95,7 +96,7 @@ Some specific directions that we currently focus on include
 <h2>Opening </h2>
 <div class="infoblock">
 <div class="blockcontent">
-<p>I am not qualified to advise doctoral students currently. Perspective master students may check <a href="../perspective.html" target=&ldquo;blank&rdquo;>this page</a> for information on our lab. 
+<p>I am not qualified to advise doctoral students currently. Perspective master students may check <a href="../perspective.html" target=&ldquo;blank&rdquo;>this page</a> for information about our lab. 
 </p>
 </div></div>
 <p>Follow us on wechat
@@ -105,7 +106,7 @@ Some specific directions that we currently focus on include
 <td align="left"></td></tr></table>
 <div id="footer">
 <div id="footer-text">
-Page generated 2024-03-10 20:30:11 China Standard Time, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
+Page generated 2024-03-25 12:44:00 China Standard Time, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
 </div>
 </div>
 </td>
