--- a/tef_uestc.html
+++ b/tef_uestc.html
@@ -108,6 +108,9 @@ MathJax.Hub.Config({
 <li><p>8. 道路通行能力(2) [同上] 
 </p>
 </li>
+<li><p>课堂/课下作业 [<a href="../assets/pdf/TrafficEngineeringFundaments/hw1.pdf" target=&ldquo;blank&rdquo;>下载或阅读</a>] 
+</p>
+</li>
 <li><p>9. 交通中的选择行为(1) [<a href="../assets/pdf/TrafficEngineeringFundaments/9-10.Choice.pdf" target=&ldquo;blank&rdquo;>下载或阅读</a>] 
 </p>
 </li>
@@ -134,7 +137,7 @@ MathJax.Hub.Config({
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2024-03-25 12:44:00 China Standard Time, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
+Page generated 2024-03-25 13:05:22 China Standard Time, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
 </div>
 </div>
 </td>
