--- a/tuna.html
+++ b/tuna.html
@@ -39,16 +39,19 @@ MathJax.Hub.Config({
 <li><p>许俊，2024级
 </p>
 </li>
+<li><p>喻磊，2023级（导师： <a href="https://faculty.swjtu.edu.cn/hanke/zh_CN/index.htm" target=&ldquo;blank&rdquo;>韩科</a>）
+</p>
+</li>
 <li><p>王砚棋，2023级
 </p>
 </li>
 <li><p>王全鑫，2023级
 </p>
 </li>
-<li><p>张文利，2023级
+<li><p>张文利，2023级（导师： <a href="https://faculty.swjtu.edu.cn/hanke/zh_CN/index.htm" target=&ldquo;blank&rdquo;>韩科</a>）
 </p>
 </li>
-<li><p>刘盛林，2022级
+<li><p>刘盛林，2022级（导师： <a href="https://faculty.swjtu.edu.cn/hanke/zh_CN/index.htm" target=&ldquo;blank&rdquo;>韩科</a>）
 </p>
 </li>
 <li><p>陈一帆，2022级
@@ -97,12 +100,27 @@ MathJax.Hub.Config({
 </li>
 </ul>
 <ul>
-<li><p>科创实验</p>
+<li><p>科创实验
+</p>
+<ul>
+<li><p>2021-2022：颜伟洋、洪宇新、毛祈萱、李墨岩
+</p>
+</li>
+<li><p>2021-2022：曾杰、刘嘉琪、刘祝银、何远亮、张原诚
+</p>
+</li>
+<li><p>2022-2023：朱硕、许珈瑞、张中源、屈佳宜、陈迦嫱
+</p>
+</li>
+<li><p>2022-2023：张俊松、王恒之、唐晋元、王茗昕</p>
+</li>
+</ul>
+
 </li>
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2024-03-25 12:44:00 China Standard Time, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
+Page generated 2024-03-25 13:13:01 China Standard Time, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
 </div>
 </div>
 </td>
