--- a/tef_uestc.html
+++ b/tef_uestc.html
@@ -84,52 +84,52 @@ MathJax.Hub.Config({
 </ol>
 <h2>课件（每年更新）</h2>
 <ul>
-<li><p>1. 交通工程学简介 [<a href="../assets/pdf/TrafficEngineeringFundaments/1.Introduction.pdf" target=&ldquo;blank&rdquo;>下载或阅读</a>] 
+<li><p>1. 交通工程学简介 [<a href="../assets/pdf/TEF/1.Introduction.pdf" target=&ldquo;blank&rdquo;>下载或阅读</a>] 
 </p>
 </li>
-<li><p>2. 人、车、路的交通特性 [<a href="../assets/pdf/TrafficEngineeringFundaments/2.Characteristics.pdf" target=&ldquo;blank&rdquo;>下载或阅读</a>] 
+<li><p>2. 人、车、路的交通特性 [<a href="../assets/pdf/TEF/2.Characteristics.pdf" target=&ldquo;blank&rdquo;>下载或阅读</a>] 
 </p>
 </li>
-<li><p>3. 交通流特性 [<a href="../assets/pdf/TrafficEngineeringFundaments/3.Trafficchar.pdf" target=&ldquo;blank&rdquo;>下载或阅读</a>] 
+<li><p>3. 交通流特性 [<a href="../assets/pdf/TEF/3.Trafficchar.pdf" target=&ldquo;blank&rdquo;>下载或阅读</a>] 
 </p>
 </li>
-<li><p>4. 交通调查 [<a href="../assets/pdf/TrafficEngineeringFundaments/4.Surveying.pdf" target=&ldquo;blank&rdquo;>下载或阅读</a>] 
+<li><p>4. 交通调查 [<a href="../assets/pdf/TEF/4.Surveying.pdf" target=&ldquo;blank&rdquo;>下载或阅读</a>] 
 </p>
 </li>
-<li><p>5. 交通流理论 [<a href="../assets/pdf/TrafficEngineeringFundaments/5.Trafficflow.pdf" target=&ldquo;blank&rdquo;>下载或阅读</a>] 
+<li><p>5. 交通流理论 [<a href="../assets/pdf/TEF/5.Trafficflow.pdf" target=&ldquo;blank&rdquo;>下载或阅读</a>] 
 </p>
 </li>
-<li><p>6. 交通仿真简介 [<a href="../assets/pdf/TrafficEngineeringFundaments/6.Simulation.pdf" target=&ldquo;blank&rdquo;>下载或阅读</a>] 
+<li><p>6. 交通仿真简介 [<a href="../assets/pdf/TEF/6.Simulation.pdf" target=&ldquo;blank&rdquo;>下载或阅读</a>] 
 </p>
 </li>
-<li><p>7. 道路通行能力(1) [<a href="../assets/pdf/TrafficEngineeringFundaments/7-8.HC&amp;LOS.pdf" target=&ldquo;blank&rdquo;>下载或阅读</a>] 
+<li><p>7. 道路通行能力(1) [<a href="../assets/pdf/TEF/7-8.HC&amp;LOS.pdf" target=&ldquo;blank&rdquo;>下载或阅读</a>] 
 </p>
 </li>
 <li><p>8. 道路通行能力(2) [同上] 
 </p>
 </li>
-<li><p>课堂/课下作业 [<a href="../assets/pdf/TrafficEngineeringFundaments/hw1.pdf" target=&ldquo;blank&rdquo;>下载或阅读</a>] 
+<li><p>课堂/课下作业 [<a href="../assets/pdf/TEF/hw1.pdf" target=&ldquo;blank&rdquo;>下载或阅读</a>] 
 </p>
 </li>
-<li><p>9. 交通中的选择行为(1) [<a href="../assets/pdf/TrafficEngineeringFundaments/9-10.Choice.pdf" target=&ldquo;blank&rdquo;>下载或阅读</a>] 
+<li><p>9. 交通中的选择行为(1) [<a href="../assets/pdf/TEF/9-10.Choice.pdf" target=&ldquo;blank&rdquo;>下载或阅读</a>] 
 </p>
 </li>
 <li><p>10. 交通中的选择行为(2) [同上] 
 </p>
 </li>
-<li><p>11. 优化方法简介与线性规划 [<a href="../assets/pdf/TrafficEngineeringFundaments/11.LP.pdf" target=&ldquo;blank&rdquo;>下载或阅读</a>] 
+<li><p>11. 优化方法简介与线性规划 [<a href="../assets/pdf/TEF/11.LP.pdf" target=&ldquo;blank&rdquo;>下载或阅读</a>] 
 </p>
 </li>
-<li><p>12. 整数线性规划 [<a href="../assets/pdf/TrafficEngineeringFundaments/12.ILP.pdf" target=&ldquo;blank&rdquo;>下载或阅读</a>] 
+<li><p>12. 整数线性规划 [<a href="../assets/pdf/TEF/12.ILP.pdf" target=&ldquo;blank&rdquo;>下载或阅读</a>] 
 </p>
 </li>
-<li><p>13. 网络优化简介 [<a href="../assets/pdf/TrafficEngineeringFundaments/13.NetOpt.pdf" target=&ldquo;blank&rdquo;>下载或阅读</a>] 
+<li><p>13. 网络优化简介 [<a href="../assets/pdf/TEF/13.NetOpt.pdf" target=&ldquo;blank&rdquo;>下载或阅读</a>] 
 </p>
 </li>
-<li><p>14. 旅行商问题与启发式方法 [<a href="../assets/pdf/TrafficEngineeringFundaments/14.TSP.pdf" target=&ldquo;blank&rdquo;>下载或阅读</a>] 
+<li><p>14. 旅行商问题与启发式方法 [<a href="../assets/pdf/TEF/14.TSP.pdf" target=&ldquo;blank&rdquo;>下载或阅读</a>] 
 </p>
 </li>
-<li><p>15. 车辆路径问题(1) [<a href="../assets/pdf/TrafficEngineeringFundaments/15-16.VRP.pdf" target=&ldquo;blank&rdquo;>下载或阅读</a>] 
+<li><p>15. 车辆路径问题(1) [<a href="../assets/pdf/TEF/15-16.VRP.pdf" target=&ldquo;blank&rdquo;>下载或阅读</a>] 
 </p>
 </li>
 <li><p>16. 车辆路径问题(2) [同上] </p>
@@ -137,7 +137,7 @@ MathJax.Hub.Config({
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2024-03-25 13:05:22 China Standard Time, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
+Page generated 2024-03-30 21:29:44 China Standard Time, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
 </div>
 </div>
 </td>
